test coverage for caseworker journey