@@ -27,6 +27,7 @@ import uk.gov.hmcts.reform.finrem.caseorchestration.service.IdamService;
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.PrdOrganisationService;
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.SystemUserService;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -46,28 +47,30 @@ import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigCo
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.APPLICANT_BARRISTER_COLLECTION;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.APPLICANT_BARRISTER_ROLE;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.APP_SOLICITOR_POLICY;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.CASEWORKER_ROLE;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.CASE_ROLE;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.MANAGE_BARRISTER_PARTY;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.REPRESENTATION_UPDATE_HISTORY;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.RESPONDENT_BARRISTER_COLLECTION;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.RESP_SOLICITOR_POLICY;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.service.CcdServiceTest.AUTH_TOKEN;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.service.barristers.ManageBarristerService.MANAGE_BARRISTERS;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.service.barristers.ManageBarristerService.MANAGE_BARRISTER_PARTY;
 
 @RunWith(MockitoJUnitRunner.class)
 public class ManageBarristerServiceTest {
 
     private static final long CASE_ID = 1583841721773828L;
-    private static final String CASEWORKER_ROLE = "[CASEWORKER]";
     private static final String APP_BARRISTER_EMAIL_ONE = "applicantbarristerone@gmail.com";
     private static final String APP_BARRISTER_EMAIL_TWO = "applicantbarristertwo@gmail.com";
     private static final String BARRISTER_USER_ID = "barristerUserId";
     private static final String APP_SOLICITOR = "App Solicitor";
+    private static final String CASEWORKER_NAME = "The Caseworker";
+    private static final String SYS_USER_TOKEN = "sysUserToken";
+    private static final String CLIENT_NAME = "Client Name";
+    private static final String SOME_ORG_ID = "someOrgId";
     private static final Barrister DEFAULT_BARRISTER = Barrister.builder()
         .email("someEmail")
         .build();
-    private static final String CLIENT_NAME = "Client Name";
-    private static final String SOME_ORG_ID = "someOrgId";
 
     @Mock
     private BarristerUpdateDifferenceCalculator barristerUpdateDifferenceCalculator;
@@ -161,7 +164,7 @@ public class ManageBarristerServiceTest {
 
         Map<String, Object> caseData = manageBarristerService.updateBarristerAccess(caseDetails,
             List.of(DEFAULT_BARRISTER),
-            List.of(DEFAULT_BARRISTER), AUTH_TOKEN);
+            Collections.emptyList(), AUTH_TOKEN);
 
         List<Element<RepresentationUpdate>> representationUpdateHistory =
             objectMapper.convertValue(caseData.get(REPRESENTATION_UPDATE_HISTORY), new TypeReference<>() {});
@@ -177,6 +180,36 @@ public class ManageBarristerServiceTest {
     }
 
     @Test
+    public void givenValidData_whenUpdateBarristerAccessAsCaseworker_thenGrantAccessAndGenerateRepresentationUpdateData() {
+        caseDetails.getData().put(CASE_ROLE, CASEWORKER_ROLE);
+        caseDetails.getData().put(MANAGE_BARRISTER_PARTY, APPLICANT);
+        when(barristerUpdateDifferenceCalculator.calculate(any(), any())).thenReturn(buildAddedBarristerChange());
+        when(organisationService.findUserByEmail(APP_BARRISTER_EMAIL_ONE, SYS_USER_TOKEN)).thenReturn(Optional.of(BARRISTER_USER_ID));
+        when(idamService.getIdamFullName(AUTH_TOKEN)).thenReturn(CASEWORKER_NAME);
+        when(caseDataService.buildFullApplicantName(any())).thenReturn(CLIENT_NAME);
+        when(systemUserService.getSysUserToken()).thenReturn(SYS_USER_TOKEN);
+        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails, AUTH_TOKEN))
+            .thenReturn(buildCaseAssignedUserRolesResource(APP_SOLICITOR_POLICY));
+
+        Map<String, Object> caseData = manageBarristerService.updateBarristerAccess(caseDetails,
+            List.of(DEFAULT_BARRISTER),
+            Collections.emptyList(), AUTH_TOKEN);
+
+        List<Element<RepresentationUpdate>> representationUpdateHistory =
+            objectMapper.convertValue(caseData.get(REPRESENTATION_UPDATE_HISTORY), new TypeReference<>() {});
+        RepresentationUpdate update = representationUpdateHistory.get(0).getValue();
+        assertThat(update.getBy(), is(CASEWORKER_NAME));
+        assertThat(update.getAdded().getEmail(), is(APP_BARRISTER_EMAIL_ONE));
+        assertThat(update.getParty(), is(APPLICANT));
+        assertThat(update.getVia(), is(MANAGE_BARRISTERS));
+        assertThat(update.getClientName(), is(CLIENT_NAME));
+
+        verify(assignCaseAccessService).grantCaseRoleToUser(caseDetails.getId(), BARRISTER_USER_ID,
+            APPLICANT_BARRISTER_ROLE, SOME_ORG_ID);
+        verify(organisationService).findUserByEmail(APP_BARRISTER_EMAIL_ONE, SYS_USER_TOKEN);
+    }
+
+    @Test
     public void givenNoUserFound_whenUpdateBarristerAccess_thenThrowError() {
         caseDetails.getData().put(CASE_ROLE, APP_SOLICITOR_POLICY);
         when(barristerUpdateDifferenceCalculator.calculate(any(), any())).thenReturn(buildAddedBarristerChange());
@@ -187,7 +220,7 @@ public class ManageBarristerServiceTest {
         Exception exception = assertThrows(NoSuchUserException.class, () ->
             manageBarristerService.updateBarristerAccess(caseDetails,
                 List.of(DEFAULT_BARRISTER),
-                List.of(DEFAULT_BARRISTER), AUTH_TOKEN));
+                Collections.emptyList(), AUTH_TOKEN));
 
         String expectedMessage = "Could not find the user with email " + APP_BARRISTER_EMAIL_ONE;
         String actual = exception.getMessage();
